<?xml version="1.0"?>
<package format="2">
  <name>gcov_ros_sample</name>
  <version>0.0.0</version>
  <description>The gcov_ros_sample package</description>

  <maintainer email="arai@todo.todo">arai</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
